[package]
name = "calcit-dbt"
version = "0.0.2"
edition = "2018"

[lib]
name = "calcit_dbt"
path = "src/lib.rs"
crate-type = ["dylib", "rlib"] # Creates dynamic lib


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dual_balanced_ternary = "0.1.0-a8"
cirru_edn = "0.2.2"
